--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -6,25 +6,25 @@ services:
      - "8000:8000"
    volumes:
      - ".:${CWD:-/code}"
-  postgres:
-   image: postgres
-   container_name: postgres
-   ports:
-     - '5432:5432'
-   restart: always
-   env_file:
-     - ./.env
-   volumes:
-     - postgres-db:/var/lib/postgresql/data
+#   postgres:
+#    image: postgres
+#    container_name: postgres
+#    ports:
+#      - '5432:5432'
+#    restart: always
+#    env_file:
+#      - ./.env
+#    volumes:
+#      - postgres-db:/var/lib/postgresql/data
 
-  pgadmin:
-   container_name: pgadmin4
-   image: dpage/pgadmin4
-   restart: always
-   environment:
-     PGADMIN_DEFAULT_EMAIL: sravanimaddala1308@gmail.com
-     PGADMIN_DEFAULT_PASSWORD: Sravani123
-   ports:
-     - "5050:80"
-volumes:
-  postgres-db:
+#   pgadmin:
+#    container_name: pgadmin4
+#    image: dpage/pgadmin4
+#    restart: always
+#    environment:
+#      PGADMIN_DEFAULT_EMAIL: sravanimaddala1308@gmail.com
+#      PGADMIN_DEFAULT_PASSWORD: Sravani123
+#    ports:
+#      - "5050:80"
+# volumes:
+#   postgres-db:
